k8s-manifests/grafana/manifests/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "simple.example.com"
    http:
      paths:
      - path: /grafana
        pathType: Exact
        backend:
          service: 
            name: grafana2
            port:
              number: 3000
